# backend-django-withfront

./: README.md
back/back-dj-python/: Pipfile  db.sqlite3  pyproject.toml
back/back-dj-python/core/: admin.py  models.py  serializers.py  views.py
back/back-dj-python/core/templates/: account.html  base.html  home.html  index.html  login.html  profile.html  signup.html
back/back-dj-python/ifdogs/: settings.py  urls.py
